Modificaciones en maquetas de Mi cuenta y creación de maquetas de Multitravelapp

--- a/plantilla.html
+++ b/plantilla.html
@@ -50,6 +50,27 @@
                     </div>
                 </div>
                 <div class="textoPrueba">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, dolor maiores sequi dignissimos hic aspernatur facilis doloremque culpa fugit sit necessitatibus ducimus amet vel accusamus, iure debitis modi repudiandae sed.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis assumenda aliquam quod vitae error nisi veritatis quibusdam, sapiente dolor, quia repellat voluptates veniam tempore asperiores voluptatem iusto amet! Veritatis, mollitia?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea fugit, nihil maxime accusantium sed quae recusandae minima corporis blanditiis, illum, voluptatibus laborum! Nesciunt voluptatum hic accusamus veritatis, et officiis laborum!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. At corporis praesentium quae itaque rerum rem reprehenderit totam iure quas eaque quo alias dolorem nulla fuga, molestiae voluptas placeat. Et, eius.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ipsam nostrum eius laudantium nemo! Nihil, quo? Aliquid unde deserunt quibusdam sint, ab rem. Dolore quia incidunt minima autem ex laudantium!
+                </p>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores voluptates sunt ad tempore, ipsa reiciendis neque cum quaerat commodi debitis corporis perferendis, non saepe. Porro beatae tempore debitis vitae eligendi!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ipsum asperiores aperiam accusamus quis nostrum, ex magnam aut in quidem soluta, corrupti dolore, optio totam perferendis facere? Iusto, dignissimos eaque.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ad ratione, illum velit voluptatibus qui cum nihil. Dolores, temporibus neque doloremque eum iure atque natus eius deserunt, cupiditate, reiciendis veritatis.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ratione nam? Quaerat aperiam, consectetur distinctio tempore exercitationem molestiae! Ex minus molestias facilis sint sequi totam culpa enim nisi nostrum perspiciatis.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae sed earum qui distinctio tenetur perferendis? Nostrum laborum, tempore culpa enim et recusandae illum dolores! Corporis est delectus eum eaque repellat.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur accusamus esse facere maxime ad magni id eaque nostrum repellendus necessitatibus, adipisci reprehenderit enim temporibus nihil consequuntur! Nisi doloribus eius repellendus?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim molestiae culpa necessitatibus, vel deserunt delectus? Reiciendis, rem modi! A ab perferendis, quibusdam dicta adipisci ad in omnis facere voluptates iste?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, veritatis magni, aut necessitatibus atque vel aliquam quisquam facere minus, debitis perferendis nam voluptatum perspiciatis repellendus ratione. Dolores voluptatem nihil excepturi!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, odio. Fugit qui in molestias hic voluptate voluptatibus, molestiae animi, esse accusamus optio omnis illo similique quam placeat soluta praesentium neque.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima earum veritatis recusandae nobis praesentium incidunt neque maiores tempora, quia sunt accusamus architecto veniam consequuntur, quae aut eveniet quasi dolorum. Illum.
+                </p>
             </div>
         </main>
         <footer>
