--- a/register.html
+++ b/register.html
@@ -35,23 +35,34 @@
                     </div>
                 </div>
                 <div class="titleMain">
-                    <h4>Ingresa los datos para crear una cuenta</h4>
+                    <label for="" class="label_title">Ingresa los datos para crear una cuenta</label>
                 </div>
                 <div class="contenedorFrom">
-                        <input type="text" class="formulario_input" placeholder="Ingresa tu dirección de mail" required>
-                        <label for="" class="formulario_label">Usuario*</label>
-                        <input type="password" class="formulario_input" placeholder="Ingresa tu contraseña" required>
-                        <label for="" class="formulario_label">Contraseña</label>
-                        <input type="password" class="formulario_inputConf" placeholder="Repetir la contraseña para validación" required>
-						<div>
-							<h5 class="warning">* Usuario es tu dirección de mail</h5>
-						</div>
+                        <label class="field a-field a-field_a1 page__field">
+                            <input class="field__input" placeholder="Ingresa tu dirección de mail" required>
+                            <span class="field__label-wrap">
+                            <span class="field__label">Usuario  (ingresa tu dirección de mail)</span>
+                            </span>
+                        </label>
+                        <br>
+                        <br>
+                        <label class="field a-field a-field_a2 page__field">
+                            <input class="field__input" placeholder="Ingresa tu contraseña" required><i id="icon-eye"class="fa fa-eye-slash"></i>
+                            <span class="field__label-wrap">
+                            <span class="field__label">Contraseña</span>
+                            </span>
+                        </label>
+                        <br>
+                        <br>
+                        <label class="field a-field a-field_a2 page__field">
+                            <input class="field__input" placeholder="Repetir la contraseña para validación" required><i id="icon-eye"class="fa fa-eye-slash"></i>
+                        </label>
                 </div>
             </div>
         </main>
         <footer>
             <div class="contenedorFooter">
-                <button class="btn-xs-footer">Crear una cuenta</button>
+                <button class="btn-xs-footer">Ingresar</button>
             </div>
         </footer>
     </div>
