--- a/resetPass.html
+++ b/resetPass.html
@@ -39,26 +39,31 @@
                 </div>
                 <div class="contenedorFrom">
                     <br>
-                        <input type="text" class="formulario_input" placeholder="Ingresa tu dirección de mail" required>
-                        <label for="" class="formulario_label">Dirección de correo electrónico</label>
+                        <label class="field a-field a-field_a1 page__field">
+                            <input class="field__input" placeholder="Ingresa tu dirección de mail" required>
+                            <span class="field__label-wrap">
+                            <span class="field__label">Dirección de correo electrónico</span>
+                            </span>
+                        </label>
+                        <br><br><br>
                     <div>
                         <h5 class="info">
                             Te enviaremos un correo electrónico con las instrucciones para reestablecer tu contraseña.
                         </h5>
-                    </div>
+                    </div><br>
                     <div class="title">
                         <button class="btn-xs-activo">Crear una nueva contraseña</button>
                     </div>
+                    <br>
                     <div class="title">
                             <button class="btn-xs-activo">Regresar al inicio de sesión</button>
                     </div>
                 </div>
-                <div class="textoPrueba">
             </div>
         </main>
         <footer>
             <div class="contenedorFooter">
-                <button class="btn-xs-footer">Reestablecer contraseña</button>
+                <button class="btn-xs-footer">Ingresar</button>
             </div>
         </footer>
     </div>
