--- a/login.html
+++ b/login.html
@@ -35,23 +35,32 @@
                     </div>
                 </div>
                 <div class="titleMain">
-                    <h4>Ingresa los datos para iniciar sesión</h4>
+                    <label for="" class="label_title">Ingresa los datos para iniciar sesión</label>
                 </div>
                 <div class="contenedorFrom">
-                        <input type="text" class="formulario_input" placeholder="Ingresa tu dirección de mail" required>
-                        <label for="user" class="formulario_label">Usuario*</label>
-						<div id="search-wrapper">
-                        <input type="password" class="formulario_input" placeholder="Ingresa tu contraseña" required>
-						</div>
-                        <label for="pass" class="formulario_label">Contraseña</label>
-                    <div>
-                        <h5 class="warning">* Usuario es tu dirección de mail</h5>
-                    </div>
+                        <label class="field a-field a-field_a1 page__field">
+                            <input class="field__input" placeholder="Ingresa tu dirección de mail" required>
+                            <span class="field__label-wrap">
+                            <span class="field__label">Usuario  (ingresa tu dirección de mail)</span>
+                            </span>
+                        </label>
+                        <br>
+                        <br>
+                        <label class="field a-field a-field_a2 page__field">
+                            <input class="field__input" placeholder="Ingresa tu contraseña" required><i id="icon-eye"class="fa fa-eye-slash"></i>
+                            <span class="field__label-wrap">
+                            <span class="field__label">Contraseña </span>
+                            </span>
+                        </label>
+                        <br>
+                        <br>
+                        <br>
                     <div class="title">
                         <button class="btn-xs-activo">¿Has olvidado tu contraseña?</button>
                     </div>
                 </div>
                 <div class="textoPrueba">
+                </div>
             </div>
         </main>
         <footer>
