Creación plantilla Elegir agentes

--- a/register.html
+++ b/register.html
@@ -62,7 +62,7 @@
         </main>
         <footer>
             <div class="contenedorFooter">
-                <button class="btn-xs-footer">Ingresar</button>
+                <button class="btn-xs-footer">Crear una cuenta</button>
             </div>
         </footer>
     </div>
