--- a/resetPass.html
+++ b/resetPass.html
@@ -63,7 +63,7 @@
         </main>
         <footer>
             <div class="contenedorFooter">
-                <button class="btn-xs-footer">Ingresar</button>
+                <button class="btn-xs-footer">Reestablecer contraseña</button>
             </div>
         </footer>
     </div>
