Modificaciones en vistas de Multitravelapp y Mi Cuenta

--- a/Seleccionar Agente.html
+++ b/Seleccionar Agente.html
@@ -11,27 +11,34 @@
     <title>Interlands</title>
 </head>
 <body>
-  <header>
-     <img src="images/buttons/arrow-37-2.png" alt="" class="arrow"> 
-        <div class="title">
-          <h3>Seleccionar Agentes de Viajes</h3>  
-         </div>     
-    </header> 
+        <header>
+                <div class="contenedorHeader">
+                    <div>
+                        <input type=image id="imagHeader" src="images/buttons/arrow-37-2.png" >
+                    </div>
+                    <div>
+                        <h2>Seleccionar Agente de Viajes</h2>
+                    </div>
+                    <div>
+                        <h2></h2>
+                    </div>
+                </div>
+            </header>
    <main>
      <div class="container-seleciona">
-         <div class="text-p2 col-md-6 col-md-6 col-xs-12"  >
-           <label for="">Elige tu agente de viajes y comienza</label>
+         <div class="text-p col-md-6 col-md-6 col-xs-12" style="color: #064e7d">
+           <label style="color: #064e7d">Elige tu agente de viajes y comienza</label>
          </div>
-         <div id="icon" class=" text-p2 col-md-6 col-md-6 col-xs-12">
+         <div id="icon" class=" text-p col-md-6 col-md-6 col-xs-12">
             <label class="field a-field a-field_a2 page__field">
-                    <input class="field__input" placeholder="Agencia en Avellaneda-Provincia de Buenos Aires" required><i id="icon-search"class="fa fa-search"></i>
+                    <input style="color: #064e7d" class="field__input" placeholder="Agencia en Avellaneda-Provincia de Buenos Aires" required><i id="icon-search"class="fa fa-search"></i>
                 </label>
          </div>
         <div class="  col-md-6 col-md-6 col-xs-12 text-p">
              <label class="lb-label" for="">LA VELETANA Bulnes 1525</label>
              <button class="btn-elegir">Elegir</button>
         </div>
-        <div class=" col-md-6 col-md-6 col-xs-12 text-p2">
+        <div class=" col-md-6 col-md-6 col-xs-12 text-p">
               <label class="lb-label" for="">NEW PORT E.V BOMPLAND 1888</label>
               <button class="btn-elegir">Elegir</button>
         </div>
@@ -43,7 +50,7 @@
           <label class="lb-label"for="">BEL TEMPO S.R.L SUIPACHA 9634</label>
           <button class="btn-elegir">Elegir</button>
         </div>
-        <div class=" col-md-6 col-md-6 col-xs-12 text-p2">
+        <div class=" col-md-6 col-md-6 col-xs-12 text-p" style="color: #064e7d">
            <label for="">Si eres un agente de viajes</label> 
          
         </div>
