--- a/ctaLogin.html
+++ b/ctaLogin.html
@@ -29,44 +29,47 @@
                 <div class="row">
                     <div class="botonera">
                         <span class="spamBtn">
-                            <label for="" class="label_main">¿Olvidaste tu contraseña?</label>
+                        <button class="btn-xs-activo">> Ingresar</button>
+                        <button class="btn-xs-inactivo">Crear una cuenta</button>
                         </span>
                     </div>
                 </div>
                 <div class="titleMain">
-<!--                    <h4>Reestablecer tu contraseña</h4> -->
-                    <label for="" class="label_title">Reestablece tu contraseña</label>
+                    <label for="" class="label_title">Ingresa los datos para iniciar sesión</label>
                 </div>
-                <div class="contenedorFrom">
-                    <br>
+                <div class="contenedorForm">
                         <label class="field a-field a-field_a1 page__field">
                             <input class="field__input" placeholder="Ingresa tu dirección de mail" required>
                             <span class="field__label-wrap">
-                            <span class="field__label">Dirección de correo electrónico</span>
+                            <span class="field__label">Usuario  (ingresa tu dirección de mail)</span>
                             </span>
                         </label>
-                        <br><br><br>
-                    <div>
-                        <h5 class="info">
-                            Te enviaremos un correo electrónico con las instrucciones para reestablecer tu contraseña.
-                        </h5>
-                    </div><br>
+                        <br>
+                        <br>
+                        <label class="field a-field a-field_a2 page__field">
+                            <input class="field__input" placeholder="Ingresa tu contraseña" required><i id="icon-eye"class="fa fa-eye-slash"></i>
+                            <span class="field__label-wrap">
+                            <span class="field__label">Contraseña </span>
+                            </span>
+                        </label>
+                        <br>
+                        <br>
+                        <br>
                     <div class="title">
-                        <button class="btn-xs-activo">Crear una nueva contraseña</button>
+                        <button class="btn-xs-activo">¿Has olvidado tu contraseña?</button>
                     </div>
                     <br>
-                    <div class="title">
-                            <button class="btn-xs-activo">Regresar al inicio de sesión</button>
-                    </div>
+                    <br>
+                </div>
+                <div class="textoPrueba">
                 </div>
             </div>
         </main>
         <footer>
             <div class="contenedorFooter">
-                <button class="btn-xs-footer">Reestablecer contraseña</button>
+                <button class="btn-xs-footer">Ingresar</button>
             </div>
         </footer>
     </div>
-    <script src="js/jquery.js"></script>
 </body>
 </html>
