--- a/ctaRegister.html
+++ b/ctaRegister.html
@@ -37,7 +37,7 @@
                 <div class="titleMain">
                     <label for="" class="label_title">Ingresa los datos para crear una cuenta</label>
                 </div>
-                <div class="contenedorFrom">
+                <div class="contenedorForm">
                         <label class="field a-field a-field_a1 page__field">
                             <input class="field__input" placeholder="Ingresa tu dirección de mail" required>
                             <span class="field__label-wrap">
