--- a/Multitravelapp.html
+++ b/Multitravelapp.html
@@ -16,7 +16,7 @@
                         <input type=image id="imagHeader" src="images/buttons/arrow-37-2.png" >
                     </div>
                     <div>
-                        <h2>Multi Travel App</h2>
+                        <h3 style="margin-top: 10px;">Multi Travel App</h3>
                     </div>
                     <div>
                         <h2></h2>
@@ -32,7 +32,7 @@
           font-weight: bold;margin-top: -10px;height: 50px;color: #064e7d;">App multi agencia del mercado</div>
           <div class="input-text " style="color: gray;margin-top: -10px;height: 50px;"> Ahora podes combinar toda la tecnologia de la
 
-            <label class="input-text "for="" style="color: #FF9900;font-family: 'Roboto',sans-serif;
+            <label class="input-text" for="" style="color: #FF9900;font-family: 'Roboto',sans-serif;
             font-weight: bold;margin-top: -10px;height: 50px;">Compra on-line</label>
           </div>
           <div class="input-text " style="color: #FF9900;font-family: 'Roboto',sans-serif;
