--- a/Seleccionar Agente.html
+++ b/Seleccionar Agente.html
@@ -11,6 +11,7 @@
     <title>Interlands</title>
 </head>
 <body>
+        <div class="contenedorGlobal">
         <header>
                 <div class="contenedorHeader">
                     <div>
@@ -25,40 +26,43 @@
                 </div>
             </header>
    <main>
-     <div class="container-seleciona">
-         <div class="text-p col-md-6 col-md-6 col-xs-12" style="color: #064e7d">
-           <label style="color: #064e7d">Elige tu agente de viajes y comienza</label>
+        <div class="contenedorMain">
+         <div class=" input-text" style="margin-top: 10px">
+           <label style="color: #FF9900"">Elige tu agente de viajes y comienza a disfrutar tu proximo viaje</label>
          </div>
-         <div id="icon" class=" text-p col-md-6 col-md-6 col-xs-12">
+            <div class=" input-text ">
+                    <div id="icon" class="">
             <label class="field a-field a-field_a2 page__field">
                     <input style="color: #064e7d" class="field__input" placeholder="Agencia en Avellaneda-Provincia de Buenos Aires" required><i id="icon-search"class="fa fa-search"></i>
                 </label>
          </div>
-        <div class="  col-md-6 col-md-6 col-xs-12 text-p">
-             <label class="lb-label" for="">LA VELETANA Bulnes 1525</label>
+         </div>
+        <div class=" input-text">
+             <label class="lb-label">LA VELETANA BULNES 1525</label>
              <button class="btn-elegir">Elegir</button>
         </div>
-        <div class=" col-md-6 col-md-6 col-xs-12 text-p">
+        <hr>
+        <div class=" input-text">
               <label class="lb-label" for="">NEW PORT E.V BOMPLAND 1888</label>
               <button class="btn-elegir">Elegir</button>
         </div>
-        <div class=" col-md-6 col-md-6 col-xs-12 text-p">
+        <hr>
+        <div class=" input-text">
           <label class="lb-label" for=""> SANZ PETRELLO FLORIDA 944</label>
           <button class="btn-elegir">Elegir</button>
         </div>
-        <div  class=" col-md-6 col-md-6 col-xs-12 text-p">
+        <hr>
+        <div  class=" input-text">
           <label class="lb-label"for="">BEL TEMPO S.R.L SUIPACHA 9634</label>
           <button class="btn-elegir">Elegir</button>
         </div>
-        <div class=" col-md-6 col-md-6 col-xs-12 text-p" style="color: #064e7d">
-           <label for="">Si eres un agente de viajes</label> 
-         
-        </div>
-        <div class=" col-md-6 col-md-6 col-xs-12 text-p2">
+        <div class=" input-text" style="background: #CCC">
+                <label for="" style="color: #064e7d">Si eres un agente de viajes</label><br>
                  <label style="color: black; font-size: 14px" for="">Y aún no tienes nuestra app no dudes en  contartanos</label>
-             </div>
+         </div>
        </div>   
    </main>
+   </div>
    <footer>
         <div class="contenedorFooter">
             <button class="btn-xs-footer">Formulario de solicitud 
