--- a/Solicitud de alta agencia.html
+++ b/Solicitud de alta agencia.html
@@ -17,7 +17,7 @@
                                 <input type=image id="imagHeader" src="images/buttons/arrow-37-2.png" >
                             </div>
                             <div>
-                                <h2>Solicitud de Alta Agencia</h2>
+                                <h3 style="margin-top: 10px;" >Solicitud de Alta Agencia</h3>
                             </div>
                             <div>
                                 <h2></h2>
