--- a/elegir Agentes.html
+++ b/elegir Agentes.html
@@ -10,22 +10,31 @@
     <title>Interlands</title>
 </head>
 <body>
-    <header>
-         <img src="images/buttons/arrow-37-2.png" alt="" class="arrow"> 
-            <div class="title">
-              <h3>Elegir Agentes de Viajes</h3>  
-            </div>     
-    </header>
+  <div class="contenedorGlobal">  
+        <header>
+                <div class="contenedorHeader">
+                    <div>
+                        <input type=image id="imagHeader" src="images/buttons/arrow-37-2.png" >
+                    </div>
+                    <div>
+                        <h3 style="margin-top: 10px;" >Elegir agente de viajes</h3>
+                    </div>
+                    <div>
+                        <h2></h2>
+                    </div>
+                </div>
+            </header>
     <main>
-        <div class="contenedor">
-           <div class="text-p" id="lab-ele" style="height: 100px;color: #064e7d">Este proceso es por única vez</div>
-            <div class="text-p2" style="font-family: 'Roboto',sans-serif;
-                font-weight: normal;font-size: 16px;margin-top: -10px;height: 100px; color:#FF9900">Una vez seleccionada tu agencia preferida  quedara en tu app como:</div>
-            <div class="text-p" id="lab-ele"style="color: #064e7d; margin-top: -10px;height: 100px" > Agencia predeterminada</div>
-             <div class="text-p2" style="color: #FF9900;font-family: 'Roboto',sans-serif;
-                      font-weight: normal;height: 80px;font-size: 16px">Y podras ingresar directamente a las busquedas y reservas de tu aplicacion para operar con tu agencia preferida </div>
-             <div class="text-p" style="margin-top: -10px;
-             height: 120px;">
+         <div class="contenedorMain">
+           <div class="input-text" id="lab-ele" style="height: 50px;color: #064e7d">Este proceso es por única vez</div>
+            <div class="input-text" style="font-family: 'Roboto',sans-serif;
+                font-weight: normal;font-size: 16px;margin-top: -10px;height: 50px; color:#FF9900">Una vez seleccionada tu agencia preferida  quedara en tu app como:</div>
+            <div class="input-text" id="lab-ele"style="color: #064e7d; margin-top: 3px;height: 60px" > Agencia predeterminada</div>
+             <div class="input-text" style="color: #FF9900;font-family: 'Roboto',sans-serif;
+                      font-weight: normal;height: 80px;font-size: 16px">Y podras ingresar directamente a las busquedas y<br>
+                       reservas de tu aplicacion para operar con tu agencia preferida </div>
+             <div class="input-text col-md-6 col-md-6 col-xs-12" style="margin-top: 30px;
+             height: 50px;">
                       <label class="field a-field a-field_a2 page__field">
                         <input class="field__input" placeholder="Código, Nombre o localidad de la agencia"><i id="icon-search"class="fa fa-search"></i>
                         <span class="field__label-wrap">
@@ -36,9 +45,10 @@
     </div>
     </main>
     <footer>
-     <div class="contenedorFooter">
+        <div class="contenedorFooter">
           <button class="btn-xs-footer">Aplicar</button>
-     </div>
-        </footer>  
+       </div>
+    </footer>  
+  </div>
 </body>
 </html>
