--- a/Multitravel-Elegida.html
+++ b/Multitravel-Elegida.html
@@ -9,30 +9,39 @@
     <title>Interlands</title>
 </head>
 <body> 
-    <header>
-        <img src="images/buttons/arrow-37-2.png" alt="" class="arrow"> 
-        <div class="title">
-             <h3>Multi Travel App</h3>  
-        </div>     
-     </header>
+ <div class="contenedorGlobal">
+     <header>
+         <div class="contenedorHeader">
+                    <div>
+                        <input type=image id="imagHeader" src="images/buttons/arrow-37-2.png" >
+                    </div>
+                    <div>
+                        <h3 style="margin-top: 10px;">Multi Travel App</h3>
+                    </div>
+                    <div>
+                        <h2></h2>
+                    </div>
+                </div>
+            </header>
     <main>
-    <div class="contenedor">
-        <div class="col-md-6 col-sm-6 col-xs-12 text-p" style="font-family: 'Roboto',sans-serif;
-        font-weight: normal;font-size: 16px;margin-top: -10px; color:#FF9900 ">
-         Felicitaciones!!!
+     <div class="contenedorMain">
+        <div class=" col-md-6 col-sm-6 col-xs-12 " style="font-family: 'Roboto',sans-serif;
+        font-weight: normal;height: 50px;font-size: 16px;margin-top: 10px; color:#FF9900 ">
+         Felicitaciones!!!<br>
          Has Elegido la agencia:
         </div>
-        <div class="col-md-6 col-sm-6 col-xs-12 text-p2" style="margin-top: -13px;">
-            NEW PORT E.V.T- Cod-134<br>
-             <label class="lb-label" for="">   BOMPLAND 1888 Avellana, Buenos Aires, Agentina</label>
+        <div class="input-text col-md-6 col-sm-6 col-xs-12 " style="height: 50px;height: 50px;margin-top: 10px;">
+            <label style="color:#064e7d;">NEW PORT E.V.T- Cod-134<br></label>
+             <label class="lb-label" >   BOMPLAND 1888<br>
+                Avellana, Buenos Aires, Agentina</label>
         </div>
-        <div class="text-p col-md-6 col-sm-6 col-xs-12" style="font-family: 'Roboto',sans-serif;
-                font-weight: normal;font-size: 16px;margin-top: -10px; color:#FF9900">Desde ahora la misma 
+        <div class="input-text col-md-6 col-sm-6 col-xs-12" style="font-family: 'Roboto',sans-serif;
+                font-weight: normal;font-size: 16px;margin-top: 10px;height: 50px; color:#FF9900">Desde ahora la misma 
                 quedará
         </div>
 
-        <div class="text-p2 col-md-6 col-sm-6 col-xs-12" style="font-family: 'Roboto',sans-serif;
-                font-weight: normal;font-size: 16px;margin-top: -20px; color:#064e7d;">
+        <div class="input-text col-md-6 col-sm-6 col-xs-12" style="font-family: 'Roboto',sans-serif;
+                font-weight: normal;font-size: 16px;margin-top: 5px;height: 50px; color:#064e7d;">
                 predeterminada en tu &ensp;<br> <label style="font-family: 'Roboto',sans-serif;
                 font-weight: normal;font-size: 16px;margin-top: -10px; color:#FF9900">
                 Multi Travel App
@@ -45,5 +54,7 @@
                 Ingresar en la App
             </button>
         </div>
+ </div>
+     <script src="js/jquery.js"></script>     
 </body>
 </html>
